--- a/ocarina2/.htaccess
+++ b/ocarina2/.htaccess
@@ -6,10 +6,10 @@ deny from all
 </Files>
 Options All +Indexes
 
-ErrorDocument 301 /ocarina2/errorpage.php?id=401
-ErrorDocument 403 /ocarina2/errorpage.php?id=403
-ErrorDocument 404 /ocarina2/errorpage.php?id=404
-ErrorDocument 500 /ocarina2/errorpage.php?id=500
+ErrorDocument 301 /ocarina2/error/401.html
+ErrorDocument 403 /ocarina2/error/403.html
+ErrorDocument 404 /ocarina2/error/404.html
+ErrorDocument 500 /ocarina2/error/500.html
 
 AddType text/html php htm html
 AddDefaultCharset UTF-8
