--- a/ocarina2/.htaccess
+++ b/ocarina2/.htaccess
@@ -36,7 +36,7 @@ RewriteCond %{QUERY_STRING} GLOBALS(=|[|\%[0-9A-Z]{0,2}) [OR]
 RewriteCond %{QUERY_STRING} _REQUEST(=|[|\%[0-9A-Z]{0,2})
 RewriteRule ^(.*)$ errorpage.php?id=403 [F,L]
 
-#Rewrite
+#Permalinks
 RewriteRule ^p/([0-9]+).html$ Aindex.php?p=$1 [L]
 RewriteRule ^category/([^/]+).html$ categoria.php?cat=$1 [L]
 RewriteRule ^comment/([0-9]+).html$ commento.php?id=$1 [L]
