PM and other things added :)

--- a/ocarina2/.htaccess
+++ b/ocarina2/.htaccess
@@ -41,6 +41,7 @@ RewriteRule ^(.*)$ error/403.html [F,L]
 RewriteRule ^p/([0-9]+).html$ index.php?p=$1 [L]
 RewriteRule ^category/([^/]+).html$ categoria.php?cat=$1 [L]
 RewriteRule ^comment/([0-9]+).html$ commento.php?id=$1 [L]
+RewriteRule ^mp/([0-9]+).html$ mp.php?id=$1 [L]
 RewriteRule ^error/([0-9]+).html$ errorpage.php?id=$1 [L]
 RewriteRule ^news/([^/]+).html$ news.php?titolo=$1 [L]
 RewriteRule ^page/([^/]+).html$ pagina.php?titolo=$1 [L]
