Plugin list added and cachiching system fixed.

--- a/ocarina2/plugin/plugins.cfg
+++ b/ocarina2/plugin/plugins.cfg
@@ -1,11 +1,23 @@
+// This
+' is
+# a
+-- comment.
+// You are free (and encouraged) of using the comments, but remember that they have to be on a single line.
+// in other words you cannot write the follow line, or it will interpreted as a comment.
+name = ExamplePlugin // I'm doing it wrong :(
+
 name = HelloWorld
+version = 1.0
 author = Giovanni Capuano
+website = www.giovannicapuano.net
 description = Saluta il mondo!
-path = /var/www/htdocs/ocarina2/plugin/plugins/HelloWorld/hello.php
+path = HelloWorld/hello.php
 enabled = true
 
 name = Today
+version = 1.0
 author = Giovanni Capuano
+website = www.giovannicapuano.net
 description = Today ti permette di scoprire quale giorno è oggi.
-path = /var/www/htdocs/ocarina2/plugin/plugins/Today/today.php
+path = Today/today.php
 enabled = true
