Plugins now can interact with the rendering engine.

--- a/ocarina2/plugin/plugins.cfg
+++ b/ocarina2/plugin/plugins.cfg
@@ -21,3 +21,11 @@ website = www.giovannicapuano.net
 description = Today ti permette di scoprire quale giorno è oggi.
 path = Today/today.php
 enabled = true
+
+name = ChiTiPensa
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Chi ti sta pensando in questo momento? O:
+path = ChiTiPensa/chitipensa.php
+enabled = true
