Category manager fixed.

--- a/ocarina2/plugin/plugins.cfg
+++ b/ocarina2/plugin/plugins.cfg
@@ -29,3 +29,11 @@ website = www.giovannicapuano.net
 description = Chi ti sta pensando in questo momento? O:
 path = ChiTiPensa/chitipensa.php
 enabled = true
+
+name = CSRF
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Protezione alle CSRF.
+path = CSRF/csrf.php
+enabled = true
