--- a/ocarina2/plugin/plugins.cfg
+++ b/ocarina2/plugin/plugins.cfg
@@ -1,21 +1,13 @@
-// This
-' is
-# a
--- comment.
-// You are free (and encouraged) of using the comments, but remember that they have to be on a single line.
-// in other words you cannot write the follow line, or it will interpreted as a comment.
-name = ExamplePlugin // I'm doing it wrong :(
-
 name = HelloWorld
 version = 1.0
 author = Giovanni Capuano
 website = www.giovannicapuano.net
 description = Saluta il mondo!
 path = HelloWorld/hello.php
-enabled = true
+enabled = false
 
 name = ChiTiPensa
-version = 1.0
+version = 1.1
 author = Giovanni Capuano
 website = www.giovannicapuano.net
 description = Chi ti sta pensando in questo momento? O:
@@ -26,6 +18,6 @@ name = CSRF
 version = 1.0
 author = Giovanni Capuano
 website = www.giovannicapuano.net
-description = Protezione alle CSRF.
+description = Fornisce una protezione agli attacchi di tipo CSRF.
 path = CSRF/csrf.php
 enabled = true
