Plugin system improved with the installer.

--- a/ocarina2/plugin/plugins.cfg
+++ b/ocarina2/plugin/plugins.cfg
@@ -1,3 +1,19 @@
+name = ChiTiPensa
+version = 1.1
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Chi ti sta pensando in questo momento?
+path = ChiTiPensa/chitipensa.php
+enabled = true
+
+name = CSRF
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Fornisce una protezione agli attacchi di tipo CSRF (appena dopo l'installazione aggiorna la pagina!).
+path = CSRF/csrf.php
+enabled = true
+
 name = HelloWorld
 version = 1.0
 author = Giovanni Capuano
@@ -6,18 +22,3 @@ description = Saluta il mondo!
 path = HelloWorld/hello.php
 enabled = false
 
-name = ChiTiPensa
-version = 1.1
-author = Giovanni Capuano
-website = www.giovannicapuano.net
-description = Chi ti sta pensando in questo momento? O:
-path = ChiTiPensa/chitipensa.php
-enabled = true
-
-name = CSRF
-version = 1.0
-author = Giovanni Capuano
-website = www.giovannicapuano.net
-description = Fornisce una protezione agli attacchi di tipo CSRF.
-path = CSRF/csrf.php
-enabled = true
