--- a/ocarina2/plugin/plugins.cfg
+++ b/ocarina2/plugin/plugins.cfg
@@ -1,24 +1,9 @@
-name = ChiTiPensa
-version = 1.1
-author = Giovanni Capuano
-website = www.giovannicapuano.net
-description = Chi ti sta pensando in questo momento?
-path = ChiTiPensa/chitipensa.php
-enabled = true
-
 name = CSRF
 version = 1.0
 author = Giovanni Capuano
 website = www.giovannicapuano.net
-description = Fornisce una protezione agli attacchi di tipo CSRF (appena dopo l'installazione aggiorna la pagina!).
+description = Provides a protection against CSRF attacks.
+description[it] = Fornisce una protezione contro gli attacchi CSRF.
 path = CSRF/csrf.php
 enabled = true
-
-name = HelloWorld
-version = 1.0
-author = Giovanni Capuano
-website = www.giovannicapuano.net
-description = Saluta il mondo!
-path = HelloWorld/hello.php
-enabled = false
 
