--- a/ocarina2/plugin/plugins/HelloWorld/plugin.cfg
+++ b/ocarina2/plugin/plugins/HelloWorld/plugin.cfg
@@ -6,3 +6,123 @@ description = Informs your visitors about your pride in using Ocarina2 CMS!
 description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
 path = HelloWorld/hello.php
 enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
+name = HelloWorld
+version = 1.0
+author = Giovanni Capuano
+website = www.giovannicapuano.net
+description = Informs your visitors about your pride in using Ocarina2 CMS!
+description[it] = Informa i tuoi visitatori della tua fierezza nell'usare Ocarina2 CMS!
+path = HelloWorld/hello.php
+enabled = true
