Rewrited admin/preview.php and removed the plugin configuration flag.

--- a/ocarina2/plugin/plugins/BBCode/plugin.cfg
+++ b/ocarina2/plugin/plugins/BBCode/plugin.cfg
@@ -7,3 +7,4 @@ description[it] = Mette a disposizione un set di BBCode per le tue news, pagine 
 path = BBCode/bbcode.php
 working = after
 enabled = true
+textmanipulation = true
